kube-system/dashboard/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kubernetes-dashboard
  name: kubernetes-dashboard
  namespace: kube-system
spec:
  ports:
    - name: http
      port: 80
      targetPort: 9090
  selector:
    app: kubernetes-dashboard
