kube-system/dashboard/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kube-system
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/auth-type: "basic"
    nginx.ingress.kubernetes.io/auth-secret: kubernetes-dashboard-auth
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
spec:
  tls:
    - hosts:
        - kube.ael.red
      secretName: kubernetes-dashboard-tls
  rules:
    - host: kube.ael.red
      http:
        paths:
          - path: /
            backend:
              serviceName: kubernetes-dashboard
              servicePort: http
